Update reverse-proxy